# omniasr-toolkit

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: llm_300m_lora.yaml
notebooks/: finetune_omniasr_colab.ipynb
omniasr_ft/: __init__.py  data.py  export.py  infer.py  lora.py  train.py
omniasr_mlx/: __init__.py  convert.py  generate.py  model.py  verify.py
